--- a/html/Productos.html
+++ b/html/Productos.html
@@ -65,7 +65,7 @@
         </section>
         <section class="filtros">
         <h2>Filtros</h2>
-            <form action="">
+            <form data-aos="fade-up" action="">
                 <label for="Preensambladas">Preensambladas</label>
                 <input type="radio" id="Preensambladas" name="Filtros">
 
