--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/Style.css">
 </head>
 <body>
@@ -40,6 +42,22 @@
         <h2 class="titulo_mapa">¿Dónde estamos?</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9353344095457!2d-58.38216858417478!3d-34.60579666511628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccace4a3cfb97%3A0xf581be468c6f6ae7!2sTte.%20Gral.%20Juan%20Domingo%20Per%C3%B3n%2C%20C1008%20CABA!5e0!3m2!1ses-419!2sar!4v1643713369025!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
+</section>
+<section class="container">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Telefono 1</th>
+                <th scope="col">Telefono 2</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">11-7654-8030</th>
+                <th scope="row">11-7976-6730</th>
+            </tr>
+        </tbody>
+    </table>
 </section>
     </main>
     <footer>
