--- a/html/Sponsors.html
+++ b/html/Sponsors.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/Style.css">
 </head>
 <body>
@@ -32,6 +34,7 @@
         <i><a href="https://www.zotac.com/ar/es"><img src="../img/zotac-logo.png" alt="Zotac"></a></i>
         <i><a href="https://www.seagate.com/la/es/"><img src="../img/Seagate-logo.jpg" alt="Seagate"></a></i>
         </section>
+        <i class="bi bi-qr-code"><a href="https://www.afip.gob.ar/landing/default.asp">Datos fiscales</a></i>
     </main>
     <footer>
         <h2>Nuestras Redes Sociales</h2>
