--- a/html/Conectarse.html
+++ b/html/Conectarse.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/Style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -31,10 +32,10 @@
         <form class="formulario_conectarse" action="">
             <input type="text" placeholder="Usuario">
             <input type="password" placeholder="Contraseña">
-            <input type="submit">
+            <input class="boton" type="submit">
         </form>
     </main>
-    <footer>
+    <footer class="ajustar_conectarse">
         <h2>Nuestras Redes Sociales</h2>
         <section>
           <i><a href="https://www.instagram.com/"><img src="../img/Instagram_logo_2016.svg.png" alt="Instagram"></a></i>
@@ -43,5 +44,9 @@
          <i><a href="https://www.youtube.com"><img src="../img/YouTube_full-color_icon_(2017).svg.png" alt="Youtube"></a></i>
         </section>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
