--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/Style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,8 +29,8 @@
         </nav>
     </header>
     <main class="bajar">
-        <section class="contacto">
-        <section class="formulario_contacto">
+    <section class="contacto">
+        <section data-aos="fade-right" class="formulario_contacto">
         <form action="">
             <input type="email" placeholder="Email">
             <h2>¿En qué podemos ayudarte?</h2>
@@ -38,12 +39,12 @@
             <input type="reset">
         </form>
         </section>
-    <section>
+        <section data-aos="fade-left">
         <h2 class="titulo_mapa">¿Dónde estamos?</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9353344095457!2d-58.38216858417478!3d-34.60579666511628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccace4a3cfb97%3A0xf581be468c6f6ae7!2sTte.%20Gral.%20Juan%20Domingo%20Per%C3%B3n%2C%20C1008%20CABA!5e0!3m2!1ses-419!2sar!4v1643713369025!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
     </section>
-</section>
-<section class="container">
+    <section class="container">
     <table class="table">
         <thead>
             <tr>
@@ -58,7 +59,7 @@
             </tr>
         </tbody>
     </table>
-</section>
+    </section>
     </main>
     <footer>
         <h2>Nuestras Redes Sociales</h2>
@@ -69,5 +70,9 @@
          <i><a href="https://www.youtube.com"><img src="../img/YouTube_full-color_icon_(2017).svg.png" alt="Youtube"></a></i>
         </section>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
