--- a/html/Sponsors.html
+++ b/html/Sponsors.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/Style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,10 +30,10 @@
     </header>
     <main>
         <section id="sponsors">
-        <i><a href="https://www.nvidia.com/es-la/"><img src="../img/Logo-NVIDIA.png" alt="Nvidia"></a></i>
-        <i><a href="https://www.amd.com/es"><img src="../img/AMD-Logo.png" alt="AMD"></a></i>
-        <i><a href="https://www.zotac.com/ar/es"><img src="../img/zotac-logo.png" alt="Zotac"></a></i>
-        <i><a href="https://www.seagate.com/la/es/"><img src="../img/Seagate-logo.jpg" alt="Seagate"></a></i>
+        <i><a data-aos="zoom-in" href="https://www.nvidia.com/es-la/"><img src="../img/Logo-NVIDIA.png" alt="Nvidia"></a></i>
+        <i><a data-aos="zoom-in" href="https://www.amd.com/es"><img src="../img/AMD-Logo.png" alt="AMD"></a></i>
+        <i><a data-aos="zoom-in" href="https://www.zotac.com/ar/es"><img src="../img/zotac-logo.png" alt="Zotac"></a></i>
+        <i><a data-aos="zoom-in" href="https://www.seagate.com/la/es/"><img src="../img/Seagate-logo.jpg" alt="Seagate"></a></i>
         </section>
         <i class="bi bi-qr-code"><a href="https://www.afip.gob.ar/landing/default.asp">Datos fiscales</a></i>
     </main>
@@ -45,5 +46,9 @@
          <i><a href="https://www.youtube.com"><img src="../img/YouTube_full-color_icon_(2017).svg.png" alt="Youtube"></a></i>
         </section>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
