--- a/html/Productos.html
+++ b/html/Productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productos Tecno Compra</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/Style.css">
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section class="grilla_productos">
-        <img class="img_fluid" data-aos="zoom-in" id="imagen_productos_main" src="../img/pcgamer.png" alt="Imagen Productos">
+        <img class="img_fluid" data-aos="zoom-in" id="imagen_productos_main" src="../img/banner.png" alt="Imagen Productos">
             <section class="orden">
         <h2>Orden</h2>
         <select class="form-select" aria-label="Default select example">
