--- a/html/Productos.html
+++ b/html/Productos.html
@@ -49,20 +49,24 @@
             <ul>
             <li>
                 <img src="https://mallweb.com.ar/media/catalog/product/cache/1/image/900x/9df78eab33525d08d6e5fb8d27136e95/g/i/gimage_25746.jpg" alt="Producto"> <p>Placa de video Gigabyte 1660 6GB GDDR5</p>
+                <p class="precios">$130000</p>
             </li>
             <li>
                 <img src="https://www.amd.com/system/files/2020-09/616656-amd-ryzen-5-5000-series-PIB-fan-1260x709.png" alt="Producto"> <p>Procesador AMD Ryzen 5 5600X</p>
+                <p class="precios">$30000</p>
             </li>
             <li>
                 <img src="https://d24t9mem9wyce.cloudfront.net/6875345-thickbox_default/placa-de-video-asus-8gb-rtx-3070-ti-rog-strix.jpg" alt="Producto"> <p>Placa de video Asus 3070ti 8GB GDDR6</p>
+                <p class="precios">$230000</p>
             </li>
             <li>
                 <img src="https://http2.mlstatic.com/D_NQ_NP_629601-MLA49005839788_022022-W.jpg" alt="Producto"> <p>Placa de video Zotac 3070ti 8GB GDDR6</p>
+                <p class="precios">$230000</p>
             </li>
             </ul>
             </section>
             <section class="filtros">
-        <h2>Filtros</h2>
+            <h2 id="titulo_filtros">Filtros</h2>
             <form data-aos="fade-up" action="">
                 <label for="Preensambladas">Preensambladas</label>
                 <input type="radio" id="Preensambladas" name="Filtros">
