--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
      <h1>Tecno Compra</h1>
         <nav>
          <ul class="lista_menu">
-             <li><a href="Index.html">Inicio</a></li>
+             <li><a href="index.html">Inicio</a></li>
              <li><a href="html/Productos.html">Productos</a></li>
              <li><a href="">Mi Cuenta</a>
                 <ul>
