--- a/html/Registrarse.html
+++ b/html/Registrarse.html
@@ -15,7 +15,7 @@
         <h1>Tecno Compra</h1>
         <nav>
             <ul class="lista_menu">
-                <li><a href="../Index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="Productos.html">Productos</a></li>
                 <li><a href="">Mi Cuenta</a>
                     <ul>
