--- a/Index.html
+++ b/Index.html
@@ -15,11 +15,15 @@
 <body>
     <header>
      <h1>Tecno Compra</h1>
+     <section class="menu_desplegable">
+       <input type="checkbox">
+       <i class="barras"></i>
+       <i class="barras2"></i>
         <nav>
          <ul class="lista_menu">
              <li><a href="index.html">Inicio</a></li>
              <li><a href="html/Productos.html">Productos</a></li>
-             <li><a href="">Mi Cuenta</a>
+             <li class="mi_cuenta"><a href="">Mi Cuenta</a>
                 <ul>
                     <li><a href="html/Conectarse.html">Conectarse</a></li>
                     <li><a href="html/Registrarse.html">Registrarse</a></li>
@@ -29,6 +33,7 @@
              <li><a href="html/Sponsors.html">Sponsors</a></li>
          </ul>
         </nav>
+      </section>
     </header>
     <main>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
