--- a/html/Sponsors.html
+++ b/html/Sponsors.html
@@ -13,11 +13,15 @@
 <body>
     <header>
         <h1>Tecno Compra</h1>
+        <section class="menu_desplegable">
+            <input type="checkbox">
+            <i class="barras"></i>
+            <i class="barras2"></i>
         <nav>
             <ul class="lista_menu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="Productos.html">Productos</a></li>
-                <li><a href="">Mi Cuenta</a>
+                <li class="mi_cuenta"><a href="">Mi Cuenta</a>
                     <ul>
                         <li><a href="Conectarse.html">Conectarse</a></li>
                         <li><a href="Registrarse.html">Registrarse</a></li>
@@ -27,6 +31,7 @@
                 <li><a href="Sponsors.html">Sponsors</a></li>
             </ul>
         </nav>
+        </section>
     </header>
     <main>
         <section id="sponsors">
