--- a/html/Registrarse.html
+++ b/html/Registrarse.html
@@ -13,20 +13,25 @@
 <body>
     <header>
         <h1>Tecno Compra</h1>
-        <nav>
-            <ul class="lista_menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Productos.html">Productos</a></li>
-                <li><a href="">Mi Cuenta</a>
-                    <ul>
-                        <li><a href="Conectarse.html">Conectarse</a></li>
-                        <li><a href="Registrarse.html">Registrarse</a></li>
-                    </ul>
-                </li>
-                <li><a href="Contacto.html">Contacto</a></li>
-                <li><a href="Sponsors.html">Sponsors</a></li>
-            </ul>
-        </nav>
+        <section class="menu_desplegable">
+          <input type="checkbox">
+          <i class="barras"></i>
+          <i class="barras2"></i>
+      <nav>
+          <ul class="lista_menu">
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="Productos.html">Productos</a></li>
+              <li class="mi_cuenta"><a href="">Mi Cuenta</a>
+                  <ul>
+                      <li><a href="Conectarse.html">Conectarse</a></li>
+                      <li><a href="Registrarse.html">Registrarse</a></li>
+                  </ul>
+              </li>
+              <li><a href="Contacto.html">Contacto</a></li>
+              <li><a href="Sponsors.html">Sponsors</a></li>
+          </ul>
+      </nav>
+      </section>
     </header>
     <main>
         <form>
