--- a/html/Conectarse.html
+++ b/html/Conectarse.html
@@ -37,7 +37,7 @@
         <form class="formulario_conectarse" action="">
             <input type="text" placeholder="Usuario">
             <input type="password" placeholder="Contraseña">
-            <input class="boton" type="submit">
+            <button type="submit" class="boton">Conectarse</button>
         </form>
     </main>
     <footer class="ajustar_conectarse">
