--- a/html/Registrarse.html
+++ b/html/Registrarse.html
@@ -34,7 +34,8 @@
       </section>
     </header>
     <main>
-        <form>
+        <form class="formulario_registrarse">
+          <section>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -52,7 +53,11 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Check</label>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary">Registrarse</button>
+          </section>
+          <section>
+            <p>Entre en el mejor sitio de compra de componentes de PC</p>
+          </section>
           </form>
     </main>
     <footer class="ajustar_registrarse">
