--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -46,7 +46,9 @@
         </section>
         <section data-aos="fade-left">
         <h2 class="titulo_mapa">¿Dónde estamos?</h2>
+        <div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9353344095457!2d-58.38216858417478!3d-34.60579666511628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccace4a3cfb97%3A0xf581be468c6f6ae7!2sTte.%20Gral.%20Juan%20Domingo%20Per%C3%B3n%2C%20C1008%20CABA!5e0!3m2!1ses-419!2sar!4v1643713369025!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
         </section>
     </section>
     <section class="container">
